# ingridients-api-v3

./: .gitignore  app.py  devenv.nix  devenv.yaml  docker-compose.yml  flake.nix  migrate.py  pyproject.toml  requirements.txt  seed.py
category/: models.py  schema.py  schemas.py  urls.py  views.py
config/: database.py
helper/: main.py
ingridient/: models.py  schema.py  schemas.py  urls.py  views.py
permission/: models.py  schemas.py
product/: models.py
role/: models.py  schemas.py  urls.py  views.py
user/: models.py  schema.py  schemas.py  urls.py  views.py
