[tool.poetry]
name = "ingridients-api-v3"
version = "0.1.0"
description = ""
authors = ["Maulana Sodiqin <maulanasdqn@gmail.com>"]
readme = "README.md"
packages = [{include = "ingridients_api_v3"}]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.89.1"
sqlalchemy = "^2.0.1"
python-dotenv = "^0.21.1"
pydantic = "^1.10.4"
passlib = "^1.7.4"
uvicorn = "^0.20.0"
psycopg2 = "^2.9.5"
python-jose = "^3.3.0"
fastapi-pagination = "^0.11.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
