[tool.poetry]
name = "ingridients-api-v3"
version = "0.1.0"
description = "API For Ingridients"
authors = ["Maulana Sodiqin <maulanasdqn@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.96.0"
uvicorn = "^0.22.0"
sqlalchemy = "^2.0.15"
psycopg2 = "^2.9.6"
fastapi-pagination = "^0.12.4"
python-dotenv = "^1.0.0"
passlib = "^1.7.4"
python-jose = "^3.3.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
